spacing fixes

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body {
 .column{
   float: left;
   width: 50%;
+  margin-bottom: 30px;
 }
 
 .column h2{
